5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4308/executions/1573_1331.log
== SUBMITION (2019-03-17 17:25:32) 
-- CODE:
G=3
I=5
M=50-I
PG=M/G
print(PG)
print (I)
-- EXECUTION TIME:
0.177565
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:25:44) 
-- CODE:
G=3
I=5
M=50-I
PG=M/G
print(PG)
print(I)
-- EXECUTION TIME:
0.166093
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:25:47) 
-- CODE:
G=3
I=5
M=50-I
PG=M/G
print(PG)
print(I)
-- EXECUTION TIME:
0.124211
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:27:32) 
-- CODE:
G=3
I=5
M=50-I
PG=M//G
print(PG)
print(I)
-- EXECUTION TIME:
0.135985
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:27:35) 
-- CODE:
G=3
I=5
M=50-I
PG=M//G
print(PG)
print(I)
-- EXECUTION TIME:
0.209044
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:27:35) 
-- CODE:
G=3
I=5
M=50-I
PG=M//G
print(PG)
print(I)
-- EXECUTION TIME:
0.178611
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:28:24) 
-- CODE:
G=3
I=5
M=50-I
PG=M//G
print(round(PG,0))
print(round(I,0)
-- EXECUTION TIME:
0.186572
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:28:26) 
-- CODE:
G=3
I=5
M=50-I
PG=M//G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.124046
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:29:46) 
-- CODE:
G=3
I=5
M=0
PG=0
M=50-I
PG=M//G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.171788
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:29:48) 
-- CODE:
G=3
I=5
M=0
PG=0
M=50-I
PG=M//G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.106974
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:30:10) 
-- CODE:
G=3
I=5
M=0
PG=0
PG=M//G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.186927
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:30:19) 
-- CODE:
G=3
I=5
M=0
PG=0
PG=M/G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.124732
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:30:23) 
-- CODE:
G=3
I=5
M=0
PG=0
PG=M/G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.173673
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:30:49) 
-- CODE:
M=0
PG=0
G=3
I=5
PG=M/G
print(round(PG,0))
print(round(I,0))
-- EXECUTION TIME:
0.182063
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:31:21) 
-- CODE:
M=0
PG=0
G=3
I=5
PG=M/G
print PG
print PG
-- EXECUTION TIME:
0.169179
-- ERROR:
  File "/home/codebench/codes/1573/1331/main.py", line 6
    print PG
           ^
SyntaxError: Missing parentheses in call to 'print'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:31:45) 
-- CODE:
M=0
PG=0
G=3
I=5
PG=M/G
print(PG)
print(PG)
-- EXECUTION TIME:
0.128883
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.0
0.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:31:55) 
-- CODE:
M=0
PG=0
G=3
I=5
PG=M/G
print(PG)
print(I)
-- EXECUTION TIME:
0.123552
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
0.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:32:49) 
-- CODE:
G=3
I=5
M=50-I
PG=M/G
print(PG)
print(I)
-- EXECUTION TIME:
0.200693
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:33:58) 
-- CODE:
G=3
I=5
M=50-I
P=M/G
print(P)
print(I)
-- EXECUTION TIME:
0.20433
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:34:00) 
-- CODE:
G=3
I=5
M=50-I
P=M/G
print(P)
print(I)
-- EXECUTION TIME:
0.13806
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:34:28) 
-- CODE:
G=3
print (G)
-- EXECUTION TIME:
0.181524
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:34:38) 
-- CODE:
G=3
print(G)
-- EXECUTION TIME:
0.130993
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:35:13) 
-- CODE:
G=3
print(G)
-- EXECUTION TIME:
0.155578
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
3
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:39:46) 
-- CODE:
G=3
M=50
I=5
P=(50-I)/G
print(P)
-- EXECUTION TIME:
0.174265
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:40:16) 
-- CODE:
G=3
M=50
I=5
P=(50-I)//G
print(P)
-- EXECUTION TIME:
0.1676
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
15
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-17 17:54:44) 
-- CODE:
G=3
M=50
P=M//G
I=M%G
print(P)
print(I)
-- EXECUTION TIME:
0.131073
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
